--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
     <script>
         // Configuración de Firebase (reemplaza con tus credenciales)
         const firebaseConfig = {
-            apiKey: "apiKey: "AIzaSyAKNJQ0UJBtYoheIY3HklODSXd0FPofEiQ",",
-            authDomain: "control-grupo-alpunto.firebaseapp.com",
-            projectId: "control-grupo-alpunto",
-            storageBucket: "control-grupo-alpunto.firebasestorage.app",
-            messagingSenderId: "508483913073",
-            appId: "508483913073:web:fc3c3b56db0a303a20e2d"
+            apiKey: "TU_API_KEY",
+            authDomain: "TU_AUTH_DOMAIN",
+            projectId: "TU_PROJECT_ID",
+            storageBucket: "TU_STORAGE_BUCKET",
+            messagingSenderId: "TU_MESSAGING_SENDER_ID",
+            appId: "TU_APP_ID"
         };
 
         // Inicializar Firebase
