--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
     <script>
         // Configuración de Firebase (reemplaza con tus credenciales)
         const firebaseConfig = {
-            apiKey: "AIzaSyAKNJQ0UJBtYoheIY3HklODSXd0FPofEiQ",
-            authDomain: "control-grupo-alpunto.firebaseapp.com",
-            projectId: "control-grupo-alpunto",
-            storageBucket: "control-grupo-alpunto.firebasestorage.app",
-            messagingSenderId: "508483913073",
-            appId: "1:508483913073:web:fc3c3b56db0a303a20e2d0"
+            apiKey: "AIzaSyAkQEPUy-W6KgNTpAQn1KfqfnO4WybgSj8",
+            authDomain: "calculadora-alpunto.firebaseapp.com",
+            projectId: "calculadora-alpunto",
+            storageBucket: "calculadora-alpunto.firebasestorage.app",
+            messagingSenderId: "949675145064",
+            appId: "1:949675145064:web:ed0d39215a1ae3d0ff88dd"
         };
 
         // Inicializar Firebase
@@ -297,6 +297,7 @@
                     console.error('Error al exportar los datos: ', error);
                 });
         });
+		
     </script>
 </body>
 </html>
